Bug #46426
mds: 8MMDSPing is not an MMDSOp type
% Done:
0%
Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
-4> 2020-07-08T07:03:44.446+0000 7fd0df7f9700 0 mds.2.130 8MMDSPing is not an MMDSOp type -3> 2020-07-08T07:03:44.447+0000 7fd0e1ffe700 1 -- [v2:172.21.15.117:6838/2125542681,v1:172.21.15.117:6839/2125542681] <== osd.3 v2:172.21.15.117:6824/33638 3 ==== osd_op_reply(22 102.00000000 [omap-get-header out=274b,omap-get-vals out=4905b,getxattr] v0'0 uv9 ondisk = 0) v8 ==== 240+0+5179 (crc 0 0 0) 0x5577b6986480 con 0x5577b6ac4000 -2> 2020-07-08T07:03:44.447+0000 7fd0d97ed700 10 MDSIOContextBase::complete: 21C_IO_Dir_OMAP_Fetched -1> 2020-07-08T07:03:44.447+0000 7fd0df7f9700 -1 /home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/16.0.0-3278-g568a71ed455/rpm/el8/BUILD/ceph-16.0.0-3278-g568a71ed455/src/mds/MDSRank.cc: In function 'bool MDSRankDispatcher::ms_dispatch(ceph::cref_t<Message>&)' thread 7fd0df7f9700 time 2020-07-08T07:03:44.448126+0000 /home/jenkins-build/build/workspace/ceph-dev-new-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos8/DIST/centos8/MACHINE_SIZE/gigantic/release/16.0.0-3278-g568a71ed455/rpm/el8/BUILD/ceph-16.0.0-3278-g568a71ed455/src/mds/MDSRank.cc: 1016: FAILED ceph_assert(op)
From: /ceph/teuthology-archive/pdonnell-2020-07-08_02:40:18-multimds-wip-pdonnell-testing-20200707.225104-distro-basic-smithi/5207701/remote/smithi117/log/ceph-mds.a.log.gz
I'm confused why this isn't causing other tests to fail. For example:
2020-07-08T09:16:16.525+0000 7f340cb7a700 20 mds.1.cache upkeep thread waiting interval 1s 2020-07-08T09:16:17.511+0000 7f340e37d700 1 -- [v2:172.21.15.200:6834/2922152314,v1:172.21.15.200:6836/2922152314] --> [v2:172.21.15.200:6800/23195,v1:172.21.15.200:6801/23195] -- mgrreport(unknown.b +0-0 packed 1406) v9 -- 0x562fb1a9d180 con 0x562fb0d87000 2020-07-08T09:16:17.516+0000 7f3414389700 1 -- [v2:172.21.15.200:6834/2922152314,v1:172.21.15.200:6836/2922152314] <== mds.0 v2:172.21.15.152:6832/1433948666 9 ==== mdsping v1 ==== 8+0+0 (crc 0 0 0) 0x562fb0cd7900 con 0x562fb1b3f800 2020-07-08T09:16:17.516+0000 7f3414389700 20 set_next_seq: mds.metrics: current sequence number 2, setting next sequence number 3
From: /ceph/teuthology-archive/pdonnell-2020-07-08_02:40:18-multimds-wip-pdonnell-testing-20200707.225104-distro-basic-smithi/5207796/remote/smithi200/log/ceph-mds.b.log.gz
Did not fail.
History
#1 Updated by Jos Collin about 3 years ago
- Status changed from New to In Progress
- Pull request ID set to 36004
#2 Updated by Jos Collin about 3 years ago
- Status changed from In Progress to New
- Pull request ID deleted (
36004)
#3 Updated by Jos Collin almost 3 years ago
- Pull request ID set to 36004
#4 Updated by Jos Collin almost 3 years ago
- Status changed from New to Fix Under Review
#5 Updated by Patrick Donnelly almost 3 years ago
- Status changed from Fix Under Review to Resolved