src/mds/MetricsHandler.cc
@@ -34,13 +34,16 @@ bool MetricsHandler::ms_dispatch2(const ref_t<Message> &m) {
       m->get_connection()->get_peer_type() == CEPH_ENTITY_TYPE_CLIENT) {
     handle_client_metrics(ref_cast<MClientMetrics>(m));
     return true;
-  }
-  if (m->get_type() == MSG_MDS_PING &&
-      m->get_connection()->get_peer_type() == CEPH_ENTITY_TYPE_MDS) {
+  } else if (m->get_type() == MSG_MDS_PING &&
+             m->get_connection()->get_peer_type() == CEPH_ENTITY_TYPE_MDS) {
+    const Message *msg = m.get();
+    const MMDSOp *op = dynamic_cast<const MMDSOp*>(msg);
+    if (!op)
+      dout(0) << typeid(*msg).name() << " is not an MMDSOp type" << dendl;
+    ceph_assert(op);
     handle_mds_ping(ref_cast<MMDSPing>(m));
     return true;
   }
-
   return false;
 }
 
